# Anonymisering

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  PLAN_Menprovning_Utveckling_v2.md  PLAN_Menprovningsverktyg.md  README.md  Startfil  app.py  pyproject.toml  test_complete_system.py  test_complete_workflow.py  test_ner_improvements.py  test_party_insight.py  test_visualization.py
docs/: MALL_REGELINSAMLING.md  MALL_REGELINSAMLING_IFYLLD.md  MENPROVNING_HANDBOK.md  OSL_RULES.json
src/: __init__.py
src/analysis/: __init__.py  party_analyzer.py  sensitivity_analyzer.py
src/api/: __init__.py  main.py
src/core/: __init__.py  exceptions.py  models.py
src/ingestion/: __init__.py  pdf_extractor.py
src/llm/: __init__.py  client.py  requester_chat.py
src/llm/prompts/: __init__.py  sensitivity.py
src/masking/: __init__.py  masker.py
src/ner/: __init__.py  bert_ner.py  postprocessor.py  regex_ner.py
src/workflow/: __init__.py  orchestrator.py
test_results/: maskerad_testfilAi.txt
tests/: __init__.py  conftest.py
tests/unit/: __init__.py  test_bert_ner.py  test_ingestion.py  test_masking.py  test_ner.py  test_postprocessor.py  test_sensitivity_analyzer.py
